--- a/index.html
+++ b/index.html
@@ -5,6 +5,64 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <img src="#" alt="Логотип магазина GlacyShop">
+            <ul class="site-navigation">
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="#">Доставка и оплата</a></li> 
+              <li><a href="#">О Компании</a></li>
+            </ul>
+            <ul class="user-navigation">
+              <li><a href="#">Поиск</a></li>
+              <li><a href="login.html">Вход</a></li>
+              <li><a href="basket.html">Корзина</a></li>
+            </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>Glacy Shop - info</h2>
+          <p>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного<br>производства на развес</p>
+          <ul>
+          <li><p>Все наше мороженое изготавливается на собственном<br>производстве, с использованием современного оборудования<br>и проверенных временем технологий.</p></li>
+          <li><p>Закупка ингредиентов производится только у проверенных<br>фермерских хозяйств и компаний, с которыми нас связывает<br>долговременное сотрудничество.</p></li>
+          <li><p>Для приготовления мороженого используются настоящие<br>сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p></li>
+          <li><p>Доставка нашего мороженого до заказчиков осуществляется<br>в специальном термопаке, который не дает мороженому<br>растаять в пути и позволяет сохранить превосходный вкус.</p></li>
+          </ul>
+          <div>
+            <h5>Новое в нашем блоге</h5>
+            <a href="#">10 способов сервировки<br>фруктовых щербетов<br>к столу</a>
+          </div>
+          <div>
+            <p>Подпишитесь на сладкую рассылку и будете всегда в курсе<br>всего самого вкусного, что у нас происходит. Обещаем не спамить<br>и не слать всякой ненужной ерунды. Честно =)</p>
+            <input type="email">
+            <button type="button">Отправить</button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <a href="#">Твитер</a>
+        <a href="#">Инстаграм</a>
+        <a href="#">Фейсбук</a>
+        <a href="#">Вконтакте</a>
+      </div>
+      <div>
+        <ul>
+          <li><a href="#">Для поставщиков</a></li>
+          <li><a href="#">Наши документы</a></li>
+          <li><a href="#">О производстве</a></li>
+          <li><a href="#">Экологические стандарты</a></li>
+        </ul>
+      </div>
+      <p>Сделано в
+        <a href="https://htmlacademy.ru">HTML Academy</a>
+        2019
+      </p>
+    </footer>
+
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
